--- a/PACMAN/index.html
+++ b/PACMAN/index.html
@@ -11,13 +11,27 @@
 <div id="loginAndSignup">
     <script type="text/javascript" src="utils.js">
     </script>
-    <button class="text button" type="button" onclick="switch_pages('game', 'loginAndSignup')"><p>Login</p></button>
+    <button class="text button" type="button" onclick="switch_pages('login', 'loginAndSignup')"><p>Login</p></button>
     <button class="text button" type="button" onclick="switch_pages('signup', 'loginAndSignup')"><p>Sign Up</p></button>
-    
 </div>
 <br>
 
 <div id="signup">
+   <form method="post">
+        <label for="name" class="text"><p>Name:</p></label><br>
+        <input class="input" type="text" name="name">
+        <label for="email" class="text"><p>E-Mail:</p></label><br>
+        <input class="input" type="email" name="email">
+        <label for="username" class="text"><p>Username:</p></label><br>
+        <input class="input" type="text" name="name">
+        <label for="password" class="text"><p>Password:</p></label><br>
+        <input class="input" type="text" name="password">
+        <label for="birthday" class="text"><p>Birthday:</p></label><br>
+        <input class="input" type="date" name="name">
+   </form>
+</div>
+
+<div id="login">
 
 </div>
 
