--- a/PACMAN/index.html
+++ b/PACMAN/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="style.css" />
 
 <head>
-    <h1 class="text">Welcome to PacMan!</h1> 
+    <h1 class="text">Welcome to PacMan!</h1>
     <h2 class="text">Get the highest score possible in 60 seconds! Beat the record!</h2>
 </head>
 
@@ -11,39 +11,66 @@
 <div id="loginAndSignup">
     <script type="text/javascript" src="utils.js">
     </script>
-    <button class="text button" type="button" onclick="switch_pages('login', 'loginAndSignup')"><p>Login</p></button>
-    <button class="text button" type="button" onclick="switch_pages('signup', 'loginAndSignup')"><p>Sign Up</p></button>
+    <button class="text button" type="button" onclick="switch_pages('login', 'loginAndSignup')">
+        <p>Login</p>
+    </button>
+    <button class="text button" type="button" onclick="switch_pages('signup', 'loginAndSignup')">
+        <p>Sign Up</p>
+    </button>
 </div>
 <br>
 
-<div id="signup">
-   <form method="post">
-        <label for="name" class="text"><p>Name:</p></label><br>
-        <input class="input" type="text" name="name">
-        <label for="email" class="text"><p>E-Mail:</p></label><br>
-        <input class="input" type="email" name="email">
-        <label for="username" class="text"><p>Username:</p></label><br>
-        <input class="input" type="text" name="name">
-        <label for="password" class="text"><p>Password:</p></label><br>
-        <input class="input" type="text" name="password">
-        <label for="birthday" class="text"><p>Birthday:</p></label><br>
-        <input class="input" type="date" name="name">
-   </form>
+<div id="signup" class="startHidden">
+    <form method="post">
+        <label for="name" class="text">
+            <p>Name:</p>
+        </label>
+        <input class="input" type="text" name="name"><br>
+        <label for="email" class="text">
+            <p>E-Mail:</p>
+        </label>
+        <input class="input" type="email" name="email"><br>
+        <label for="username" class="text">
+            <p>Username:</p>
+        </label>
+        <input class="input" type="text" name="name"><br>
+        <label for="password" class="text">
+            <p>Password:</p>
+        </label>
+        <input class="input" type="text" name="password"><br>
+        <label for="birthday" class="text">
+            <p>Birthday:</p>
+        </label>
+        <input class="input" type="date" name="name"><br>
+        <button type="submit" class="button text" id="signupButton"><p>Sign Up</p></button>
+    </form>
 </div>
 
-<div id="login">
-
+<div id="login" class="startHidden">
+    <form>
+        <label for="username" class="text">
+            <p>Username:</p>
+        </label>
+        <input class="input" type="text" name="name"><br>
+        <label for="password" class="text">
+            <p>Password:</p>
+        </label>
+        <input class="input" type="text" name="password"><br>
+        <button type="submit" class="button text" id="signupButton"><p>Login</p></button>
+    </form>
 </div>
 
-<div id="game">
-    <body><p class="text">SCORE:</p>
-    <input id="lblScore" type="text"/>
-    <br/>
-    <p class="text">TIME:</p>
-    <input id="lblTime" type="text"/>
-    <br/>
-    <canvas id="canvas" height="600" width="600"></canvas>
-    <script type="text/javascript" src="code.js"></script>
+<div id="game" class="startHidden">
+
+    <body>
+        <p class="text">SCORE:</p>
+        <input id="lblScore" type="text" />
+        <br />
+        <p class="text">TIME:</p>
+        <input id="lblTime" type="text" />
+        <br />
+        <canvas id="canvas" height="600" width="600"></canvas>
+        <script type="text/javascript" src="code.js"></script>
     </body>
 </div>
 
@@ -51,6 +78,5 @@
 
 <script type="text/javascript" src="code.js">
 </script>
-</body>
 
 </html>
