--- a/PACMAN/index.html
+++ b/PACMAN/index.html
@@ -17,6 +17,9 @@
     <button class="text button" type="button" onclick="switch_pages('signup', 'loginAndSignup')">
         <p>Sign Up</p>
     </button>
+    <br><br>
+    <img src="C:\\Users\\Alon Lavy\\Documents\\GitHub\\chapter-b-js\\resources\\Pac-Man.png" alt="pacman!">
+
 </div>
 <br>
 
@@ -42,7 +45,9 @@
             <p>Birthday:</p>
         </label>
         <input class="input" type="date" name="name"><br>
-        <button type="submit" class="button text" id="signupButton"><p>Sign Up</p></button>
+        <button type="submit" class="button text" id="signupButton">
+            <p>Sign Up</p>
+        </button>
     </form>
 </div>
 
@@ -56,22 +61,21 @@
             <p>Password:</p>
         </label>
         <input class="input" type="text" name="password"><br>
-        <button type="submit" class="button text" id="signupButton"><p>Login</p></button>
+        <button type="submit" class="button text" id="signupButton">
+            <p>Login</p>
+        </button>
     </form>
 </div>
 
 <div id="game" class="startHidden">
-
-    <body>
-        <p class="text">SCORE:</p>
-        <input id="lblScore" type="text" />
-        <br />
-        <p class="text">TIME:</p>
-        <input id="lblTime" type="text" />
-        <br />
-        <canvas id="canvas" height="600" width="600"></canvas>
-        <script type="text/javascript" src="code.js"></script>
-    </body>
+    <p class="text">SCORE:</p>
+    <input id="lblScore" type="text" />
+    <br />
+    <p class="text">TIME:</p>
+    <input id="lblTime" type="text" />
+    <br />
+    <canvas id="canvas" height="600" width="600"></canvas>
+    <script type="text/javascript" src="code.js"></script>
 </div>
 
 
