while working on implementation of vallidation functions.

--- a/PACMAN/index.html
+++ b/PACMAN/index.html
@@ -23,7 +23,7 @@
 </div>
 <br>
 
-<div id="signup" class="startHidden">
+<div id="signup" class="startHidden" onsubmit="return validate_signup()">
     <form name="singupForm" method="post">
         <label for="name" class="text">
             <p>Name:</p>
