Implementation of validation functions worked

--- a/PACMAN/index.html
+++ b/PACMAN/index.html
@@ -40,7 +40,7 @@
         <label for="password" class="text">
             <p>Password:</p>
         </label>
-        <input class="input" type="text" name="password" id="signupPassowrd"><br>
+        <input class="input" type="text" name="password" id="signupPassword"><br>
         <label for="birthday" class="text">
             <p>Birthday:</p>
         </label>
