Trying to place username on side of the game screen, while seeing a bug in the game part

--- a/PACMAN/index.html
+++ b/PACMAN/index.html
@@ -5,7 +5,7 @@
 <head>
     <h1 class="text">Welcome to PacMan!</h1>
     <h2 class="text">Get the highest score possible in 60 seconds! Beat the record!</h2>
-    <h3 class="text startHidden" id="usernameTag"></h3>
+    <h3 class="text" id="usernameTag">Hello</h3>
 </head>
 
 <br>
