--- a/PACMAN/index.html
+++ b/PACMAN/index.html
@@ -5,7 +5,7 @@
 <head>
     <h1 class="text">Welcome to PacMan!</h1>
     <h2 class="text">Get the highest score possible in 60 seconds! Beat the record!</h2>
-    <h3 class="text" id="usernameTag">Hello</h3>
+    
 </head>
 
 <br>
@@ -69,11 +69,12 @@
 </div>
 
 <div id="game" class="startHidden">
-    <p class="text">SCORE:</p>
-    <input id="lblScore" type="text" />
+    <h3 class="text" id="usernameTag">Hello</h3>
+    <p class="text sideBySide">SCORE:</p>
+    <input id="lblScore" type="text" class="sideBySide"/>
     <br />
-    <p class="text">TIME:</p>
-    <input id="lblTime" type="text" />
+    <p class="text sideBySide">TIME:</p>
+    <input id="lblTime" type="text" class="sideBySide" />
     <br />
     <canvas id="canvas" height="600" width="600"></canvas>
     <script type="text/javascript" src="game.js"></script>
