--- a/PACMAN/index.html
+++ b/PACMAN/index.html
@@ -4,11 +4,9 @@
 
 <head>
     <h1 class="text">Welcome to PacMan!</h1>
-    <h2 class="text">Get the highest score possible in 60 seconds! Beat the record!</h2>
-    
+    <h2 class="text">Get the highest score possible in 60 seconds! Beat the record!</h2>    
 </head>
 
-<br>
 <div id="loginAndSignup">
     <script type="text/javascript" src="pageManagment.js">
     </script>
@@ -69,13 +67,13 @@
 </div>
 
 <div id="game" class="startHidden">
-    <h3 class="text" id="usernameTag">Hello</h3>
+    <h3 class="text" id="usernameTag">username label.</h3>
     <p class="text sideBySide">SCORE:</p>
     <input id="lblScore" type="text" class="sideBySide"/>
-    <br />
     <p class="text sideBySide">TIME:</p>
     <input id="lblTime" type="text" class="sideBySide" />
-    <br />
+    <hr>
+    <div id="gameboard"></div>
     <canvas id="canvas" height="600" width="600"></canvas>
     <script type="text/javascript" src="game.js"></script>
 </div>
