Changing file names and splitting code into different files

--- a/PACMAN/index.html
+++ b/PACMAN/index.html
@@ -75,12 +75,12 @@
     <hr>
     <div id="gameboard"></div>
     <canvas id="canvas" height="600" width="600"></canvas>
-    <script type="text/javascript" src="game.js"></script>
+    <script type="text/javascript" src="gameLogic.js"></script>
 </div>
 
 
 
-<script type="text/javascript" src="game.js">
+<script type="text/javascript" src="gameLogic.js">
 </script>
 <script type="text/javascript" src="userManagment.js">
 </script>
