--- a/PACMAN-OOP/index.html
+++ b/PACMAN-OOP/index.html
@@ -2,9 +2,17 @@
 <html>
 <link rel="stylesheet" type="text/css" href="style.css" />
 
+
 <head>
     <h1 class="text">Welcome to PacMan!</h1>
-    <h2 class="text">Get the highest score possible in 60 seconds! Beat the record!</h2>    
+    <h2 class="text">Get the highest score possible in 60 seconds! Beat the record!</h2>
+    <script type="module" src="./modules/pacman.js"></script>
+    <script type="module" src="./modules/board.js"></script>
+    <script type="module" src="./modules/ghost.js"></script>
+    <script type="module" src="./modules/food.js"></script>
+    <script type="module" src="./modules/obstacle.js"></script>
+    <script type="module" src="./modules/boardItems.js"></script>
+    <script type="module" src="./modules/CONSTANTS.js"></script>
 </head>
 
 <div id="loginAndSignup">
@@ -57,7 +65,7 @@
         </label>
         <input class="input" type="text" name="name" id="loginUsername"><br>
         <label for="password" class="text">
-            <p>Password:</p>    
+            <p>Password:</p>
         </label>
         <input class="input" type="text" name="password" id="loginPassword"><br>
         <button type="submit" class="button text" id="signupButton" onsubmit="return login(event)">
@@ -69,20 +77,20 @@
 <div id="game" class="startHidden">
     <h3 class="text" id="usernameTag">username label.</h3>
     <p class="text sideBySide">SCORE:</p>
-    <input id="lblScore" type="text" class="sideBySide"/>
+    <input id="lblScore" type="text" class="sideBySide" />
     <p class="text sideBySide">TIME:</p>
     <input id="lblTime" type="text" class="sideBySide" />
     <hr>
     <div id="gameboard"></div>
     <canvas id="canvas" height="600" width="600"></canvas>
-    <script type="text/module" src="main.mjs"></script>
-</div>
+    <script type="text/javascript" src="main.js"></script>
 
 
 
-<script type="text/module" src="main.mjs">
-</script>
-<script type="text/javascript" src="userManagment.js">
-</script>
+
+    <script type="text/javascript" src="main.js">
+    </script>
+    <script type="text/javascript" src="userManagment.js">
+    </script>
 
 </html>
