--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <br>
 
 <div id="signup" class="startHidden" onsubmit="return validate_signup()">
-    <form name="singupForm" method="post">
+    <form name="singupForm" method="get">
         <label for="name" class="text">
             <p>Name:</p>
         </label>
