Added border and changed password to be hidden when typed.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <label for="password" class="text">
             <p>Password:</p>
         </label>
-        <input class="input" type="text" name="password" id="signupPassword"><br>
+        <input class="input" type="password" name="password" id="signupPassword"><br>
         <label for="birthday" class="text">
             <p>Birthday:</p>
         </label>
@@ -68,7 +68,7 @@
         <label for="password" class="text">
             <p>Password:</p>
         </label>
-        <input class="input" type="text" name="password" id="loginPassword"><br>
+        <input class="input" type="password" name="password" id="loginPassword"><br>
         <button type="submit" class="button text" id="signupButton" onsubmit="return login(event)">
             <p>Login</p>
         </button>
@@ -82,8 +82,8 @@
     <p class="text sideBySide">TIME:</p>
     <input id="lblTime" type="text" class="sideBySide" />
     <hr>
-    <div id="gameboard"></div>
-    <canvas id="canvas" height="600" width="600"></canvas>
+    <div id="gameboard">
+    <canvas id="canvas" height="600" width="600" ></canvas></div>
     
 
 
