--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
 
 <div id="game" class="startHidden">
     <h3 class="text" id="usernameTag">username label.</h3>
+
+    <p class="text sideBySide">Foods:</p>
+    <input id="labelFoods" type="text" class="sideBySide" />
+    <p class="text sideBySide">Ghosts:</p>
+    <input id="labelGhosts" type="text" class="sideBySide" />
+    <br>
+
     <p class="text sideBySide">SCORE:</p>
     <input id="lblScore" type="text" class="sideBySide" />
     <p class="text sideBySide">TIME:</p>
