Changes of food amount and ghosts work

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     <h3 class="text" id="usernameTag">username label.</h3>
 
     <p class="text sideBySide">Foods:</p>
-    <input id="labelFoods" type="text" class="sideBySide" />
+    <input id="labelFoods" type="text" class="sideBySide" value="20"/>
     <p class="text sideBySide">Ghosts:</p>
-    <input id="labelGhosts" type="text" class="sideBySide" />
+    <input id="labelGhosts" type="text" class="sideBySide" value="2"/>
     <br>
 
     <p class="text sideBySide">SCORE:</p>
@@ -90,11 +90,11 @@
     <input id="lblTime" type="text" class="sideBySide" />
     <hr>
     <div id="gameboard">
-    <canvas id="canvas" height="600" width="600" ></canvas></div>
-    
-
+        <canvas id="canvas" height="600" width="600"></canvas>
+    </div>
 
     <script type="text/javascript" src="userManagment.js">
     </script>
+</div>
 
 </html>
