--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <p>Password:</p>
         </label>
         <input class="input" type="password" name="password" id="loginPassword"><br>
-        <button type="submit" class="button text" id="signupButton" onsubmit="return login(event)">
+        <button type="submit" class="button text" id="loginButton" onsubmit="return login(event)">
             <p>Login</p>
         </button>
     </form>
@@ -77,12 +77,14 @@
 
 <div id="game" class="startHidden">
     <h3 class="text" id="usernameTag">username label.</h3>
+    <div id="changeGame">
+        <p class="text sideBySide">Foods: </p>
+        <input id="labelFoods" type="text" class="sideBySide" value="20" />
+        <p class="text sideBySide">Ghosts: </p>
+        <input id="labelGhosts" type="text" class="sideBySide" value="2" />
+        <br>
+    </div>
 
-    <p class="text sideBySide">Foods: </p>
-    <input id="labelFoods" type="text" class="sideBySide" value="20"/>
-    <p class="text sideBySide">Ghosts: </p>
-    <input id="labelGhosts" type="text" class="sideBySide" value="2"/>
-    <br>
 
     <p class="text sideBySide">SCORE:</p>
     <input id="lblScore" type="text" class="sideBySide" />
