Pacman dying and reloading the game well and as expected

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <h1 class="text">Welcome to PacMan!</h1>
-    <h2 class="text">Get the highest score possible in 60 seconds! Beat the record!</h2>
+    <h2 class="text" id="description">Get the highest score possible before dying!</h2>
     <script type="module" src="/pacman.js"></script>
     <script type="module" src="/board.js"></script>
     <script type="module" src="/ghost.js"></script>
