Restart button working well, but allowing restart before game has started

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
 <head>
-    <h1 class="text">Welcome to PacMan!</h1>
+    <h1 class="text" id="pageHead">Welcome to PacMan!</h1>
     <h2 class="text" id="description">Get the highest score possible before dying!</h2>
     <script type="module" src="/pacman.js"></script>
     <script type="module" src="/board.js"></script>
@@ -82,7 +82,7 @@
         <input id="labelFoods" type="text" class="sideBySide" value="20" />
         <p class="text sideBySide">Ghosts: </p>
         <input id="labelGhosts" type="text" class="sideBySide" value="2" />
-        <br>
+        <button id="restart" class="button text sideBySide" type="button"><p>Restart</p></button>
     </div>
 
 
