Restart button working well, stopping pacman from moving after restart mid-game

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 </div>
 
 <div id="game" class="startHidden">
-    <h3 class="text" id="usernameTag">username label.</h3>
     <div id="changeGame">
+        <h3 class="text sideBySide" id="usernameTag">username label.</h3>
         <p class="text sideBySide">Foods: </p>
         <input id="labelFoods" type="text" class="sideBySide" value="20" />
         <p class="text sideBySide">Ghosts: </p>
