Added html and style pages to previous commit

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     <div id="changeGame">
         <h3 class="text sideBySide" id="usernameTag">username label.</h3>
         <p class="text sideBySide">Foods: </p>
-        <input id="labelFoods" type="number" class="sideBySide" value="30" min="1" max="70"/>
+        <input id="labelFoods" type="number" class="sideBySide changeGame" value="30" min="1" max="70"/>
         <p class="text sideBySide">Ghosts: </p>
-        <input id="labelGhosts" type="number" class="sideBySide" value="2" min="1" max="4"/>
+        <input id="labelGhosts" type="number" class="sideBySide changeGame" value="2" min="1" max="4"/>
         <button id="restart" class="button text sideBySide" type="button"><p>Restart</p></button>
     </div>
 
