Added lives counter

--- a/index.html
+++ b/index.html
@@ -86,10 +86,13 @@
     </div>
 
 
-    <p class="text sideBySide">SCORE:</p>
+    <p class="text sideBySide">Score:</p>
     <input id="lblScore" type="text" class="sideBySide" readonly/>
-    <p class="text sideBySide">TIME:</p>
+    <p class="text sideBySide">Time:</p>
     <input id="lblTime" type="text" class="sideBySide" readonly/>
+    <p class="text sideBySide">Lives:</p>
+    <input id="labelLives" type="number" class="sideBySide" readonly/>
+
     <hr>
     <div id="gameboard">
         <canvas id="canvas" height="600" width="600"></canvas>
